--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ futures = "0.3.30"
 chrono = { version = "0.4.31", features = ["serde"] }
 dioxus = "0.4.3"
 dioxus-desktop = "0.4.3"
+dioxus-sortable = "0.1.2"
